--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
                     </div>
                     <div class="year-content">
                         <div class="news-group">
+                        <h4>June 2025</h4>                        
+                        <div class="news-item">Reviewed for <a href="https://neurips.cc/Conferences/2025">NeurIPS Main Conference</a></div>
+                        </div>
+
+                        <div class="news-group">
+                        <h4>May 2025</h4>                        
+                        <div class="news-item">Reviewed for <a href="https://colmweb.org/">COLM 2025 Main Conference</a> and the <a href="https://actionable-interpretability.github.io/">Workshop on Actionable Interpretability at ICML 2025</a> </div>
+                        </div>
+
+                        <div class="news-group">
                         <h4>April 2025</h4>
                         <div class="news-item">Had a fun time attending <a href="https://nenlp.github.io/spr2025/">NENLP 2025</a> at Yale.</div>
                         <div class="news-item">In a <a href="https://dualroute.baulab.info">new preprint</a>, we find we can separate out how LLMs do verbatim copying of tokens vs. copying of word meanings. This was a fun project led by <a href="https://sfeucht.github.io/">Sheridan</a>, that helps clarify how "induction" in LLMs can also happen over abstract contextual information rather than just literal token values.</div>
@@ -197,7 +207,7 @@
 
           <hr>
           <footer>
-              <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on April 18, 2025.</p>
+              <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on <span class="last-updated"></span>.</p>
           </footer>
         </div>
 
