--- a/publications.html
+++ b/publications.html
@@ -248,7 +248,7 @@
 
             <hr>
             <footer>
-                <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on April 18, 2025.</p>
+                <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on <span class="last-updated"></span>.</p>
             </footer>
         
         </div>
