--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eric Todd</title>
+    <title>Eric Todd - Publications</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
     <!-- Font Awesome -->
@@ -18,9 +18,9 @@
         <nav class="top-nav">
             <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="files/Curriculum_Vitae.pdf">CV</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <!-- Add more links as needed -->
+            <!-- <li><a href="blog.html">Blog</a></li> -->
+            <li><a href="files/Curriculum_Vitae.pdf" target="_blank">CV</a></li>
             </ul>
         </nav>
         </div>
@@ -43,17 +43,40 @@
                 <h2>Conference Publications</h2>
 
                 <div class="citation">
+                <a href="https://arxiv.org/abs/2504.03022" target="_blank">The Dual-Route Model of Induction</a><br>
+                Sheridan Feucht, <b>Eric Todd</b>, Byron C. Wallace, David Bau. <br>
+                <em>The Second Conference on Language Modeling.</em> (COLM 2025)
+                <div class="publication-content">
+                    <div class="button-container">
+                        <button class="abstract-toggle">Abstract</button> 
+                        <a href="https://dualroute.baulab.info" target="_blank"><button>Project Website</button></a>
+                        <a href="https://arxiv.org/pdf/2504.03022" target="_blank"><button>PDF</button></a>
+                        <a href="https://openreview.net/forum?id=bNTrKqqnG9" target="_blank"><button>OpenReview</button></a>
+                        <div class="abstract-container">
+                            <p>Prior work on in-context copying has shown the existence of induction heads, which attend to and promote individual tokens during copying. 
+                                In this work we introduce a new type of induction head: concept-level induction heads, which copy entire lexical units instead of individual tokens. 
+                                Concept induction heads learn to attend to the ends of multi-token words throughout training, working in parallel with token-level induction heads 
+                                to copy meaningful text. We show that these heads are responsible for semantic tasks like word-level translation, whereas token inductin heads are vital for tasks that can only be done verbatim, like copying nonsense tokens. 
+                                These two "routes" operate independently: we show that ablation of token induction heads causes models to paraphrase where they would otherwise copy verbatim. 
+                                In light of these findings, we argue that although token induction heads are vital for specific tasks, concept induction heads may be more broadly relevant for in-context learning.</p>
+                            </div>
+                        </div>
+                    </div> 
+            </div>
+
+                <div class="citation">
+                    <a href="https://arxiv.org/abs/2407.14561" target="_blank">NNsight and NDIF: Democratizing Access to Open-Weight Foundation Model Internals</a><br>
                     Jaden Fiotto-Kaufman, Alexander R. Loftus, <b>Eric Todd</b>, Jannik Brinkmann, Koyena Pal, Dmitrii Troitskii, 
                     Michael Ripa, Adam Belfki, Can Rager, Caden Juang, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Nikhil Prakash, 
-                    Carla Brodley, Arjun Guha, Jonathan Bell, Byron C. Wallace, David Bau. 
-                    <a href="https://arxiv.org/pdf/2407.14561">NNsight and NDIF: Democratizing Access to Open-Weight Foundation Model Internals.</a> <em>Proceedings of the 2025 International Conference on Learning Representations.</em> (ICLR 2025)
+                    Carla Brodley, Arjun Guha, Jonathan Bell, Byron C. Wallace, David Bau. <br>
+                    <em>The Thirteenth International Conference on Learning Representations.</em> (ICLR 2025)
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
-                            <a href="https://nnsight.net"><button>NNsight Website</button></a>
-                            <a href="https://ndif.us"><button>NDIF Website</button></a>
-                            <a href="https://arxiv.org/abs/2407.14561"><button>PDF</button></a>
-                            <a href="https://openreview.net/forum?id=MxbEiFRf39"><button>OpenReview</button></a>
+                            <a href="https://nnsight.net" target="_blank"><button>NNsight Website</button></a>
+                            <a href="https://ndif.us" target="_blank"><button>NDIF Website</button></a>
+                            <a href="https://arxiv.org/pdf/2407.14561" target="_blank"><button>PDF</button></a>
+                            <a href="https://openreview.net/forum?id=MxbEiFRf39" target="_blank"><button>OpenReview</button></a>
                             <div class="abstract-container">
                                 <p> We introduce NNsight and NDIF, technologies that work in tandem to enable
                                     scientific study of very large neural networks. NNsight is an open-source system
@@ -69,22 +92,22 @@
                                     the design and use of our framework to address this gap by enabling a range of
                                     research methods on huge models. Finally, we conduct benchmarks to compare
                                     performance with previous approaches. Code, documentation, and tutorials are
-                                    available at <a href="https://nnsight.net/">https://nnsight.net/</a>.</p>
+                                    available at <a href="https://nnsight.net/" target="_blank">https://nnsight.net/</a>.</p>
                                 </div>
                             </div>
                         </div> 
                 </div>
                     
                 <div class="citation">
-                    <b>Eric Todd</b>, Millicent L. Li, Arnab Sen Sharma, Aaron Mueller, Byron C. Wallace, David Bau. 
-                    <a href="https://arxiv.org/pdf/2310.15213">Function Vectors in Large Language Models.</a> 
-                    <em>Proceedings of the 2024 International Conference on Learning Representations.</em> (ICLR 2024)
+                    <a href="https://arxiv.org/abs/2310.15213" target="_blank">Function Vectors in Large Language Models</a> <br> 
+                    <b>Eric Todd</b>, Millicent L. Li, Arnab Sen Sharma, Aaron Mueller, Byron C. Wallace, David Bau. <br>
+                    <em>The Twelfth International Conference on Learning Representations.</em> (ICLR 2024)
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
-                            <a href="https://functions.baulab.info"><button>Project Website</button></a>
-                            <a href="https://arxiv.org/abs/2310.15213"><button>PDF</button></a>
-                            <a href="https://openreview.net/forum?id=AwyxtyMwaG"><button>OpenReview</button></a>
+                            <a href="https://functions.baulab.info" target="_blank"><button>Project Website</button></a>
+                            <a href="https://arxiv.org/pdf/2310.15213" target="_blank"><button>PDF</button></a>
+                            <a href="https://openreview.net/forum?id=AwyxtyMwaG" target="_blank"><button>OpenReview</button></a>
                             <div class="abstract-container">
                                 <p>We report the presence of a simple neural mechanism that represents an input-output function as a vector 
                                     within autoregressive transformer language models (LMs). Using causal mediation analysis on a diverse range 
@@ -102,15 +125,15 @@
                 </div> 
 
                 <div class="citation">
+                    <a href="https://pubs.aip.org/asa/poma/article/39/1/040003/838127/Automatic-detection-of-instances-of-focused-crowd" target="_blank">Automatic detection of instances of
+                        focused crowd involvement at recreational events</a> <br>
                     <b>Eric Todd</b>, Mylan R. Cook, Katrina Pedersen, David S. Woolworth, Brooks A. Butler, Xin Zhao,
-                    Colt Liu, Kent L. Gee, Mark K. Transtrum, Sean Warnick. 
-                    <a href="https://pubs.aip.org/asa/poma/article/39/1/040003/838127/Automatic-detection-of-instances-of-focused-crowd">Automatic detection of instances of
-                        focused crowd involvement at recreational events.</a> <em>Proceedings of Meetings on Acoustics</em> <b>39</b>, 040003. (2019)
+                    Colt Liu, Kent L. Gee, Mark K. Transtrum, Sean Warnick. <br>
+                    <em>Proceedings of Meetings on Acoustics</em> <b>39</b> (1) (2019)
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
-                            <a href="files/automatic-detection-of-focused-crowd-involvement.pdf"><button>PDF</button></a>
-                            <!-- <a href="https://pubs.aip.org/asa/poma/article/39/1/040003/838127/Automatic-detection-of-instances-of-focused-crowd"><button>POMA</button></a> -->
+                            <a href="files/automatic-detection-of-focused-crowd-involvement.pdf" target="_blank"><button>PDF</button></a>
                             <div class="abstract-container">
                                 <p>This paper describes the development of an automated classification algorithm for detecting instances of focused
                                     crowd involvement present in crowd cheering. The purpose of this classification system is for situations where crowds
@@ -129,13 +152,13 @@
                 </div> 
 
                 <div class="citation">
-                    Brooks A. Butler, Katrina Pedersen, Mylan R. Cook, Spencer G. Wadsworth, <b>Eric Todd</b>, Dallen Stark, Kent L. Gee, Mark K. Transtrum, Sean Warnick.
-                    <a href="https://pubs.aip.org/asa/poma/article/35/1/055006/997305/Classifying-crowd-behavior-at-collegiate">Classifying crowd behavior at collegiate basketball games using acoustic data.</a> <em>Proceedings of Meetings on Acoustics</em> <b>35</b>, 055006. (2018)
+                    <a href="https://pubs.aip.org/asa/poma/article/35/1/055006/997305/Classifying-crowd-behavior-at-collegiate" target="_blank">Classifying crowd behavior at collegiate basketball games using acoustic data.</a><br>
+                    Brooks A. Butler, Katrina Pedersen, Mylan R. Cook, Spencer G. Wadsworth, <b>Eric Todd</b>, Dallen Stark, Kent L. Gee, Mark K. Transtrum, Sean Warnick. <br>
+                    <em>Proceedings of Meetings on Acoustics</em> <b>35</b> (1) (2018)
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
-                            <a href="files/classifying-crowd-behavior-basketball.pdf"><button>PDF</button></a>                            
-                            <!-- <a href="https://pubs.aip.org/asa/poma/article/35/1/055006/997305/Classifying-crowd-behavior-at-collegiate"><button>Link</button></a> -->
+                            <a href="files/classifying-crowd-behavior-basketball.pdf" target="_blank"><button>PDF</button></a>                            
                             <div class="abstract-container">
                                 <p>The relationship between crowd noise and crowd behavioral dynamics is a relatively unexplored field of
                                     research. Signal processing and machine learning (ML) may be useful in classifying and predicting crowd
@@ -160,36 +183,17 @@
             <section id="preprints">
             <h2>Preprints and In Submission</h2>
 
-            <div class="citation">
-                Sheridan Feucht, <b>Eric Todd</b>, Byron C. Wallace, David Bau.
-                <a href="https://arxiv.org/abs/2504.03022">The Dual Route Model of Induction.</a> 2025.
-                <div class="publication-content">
-                    <div class="button-container">
-                        <button class="abstract-toggle">Abstract</button> 
-                        <a href="https://dualroute.baulab.info"><button>Project Website</button></a>
-                        <a href="https://arxiv.org/pdf/2504.03022"><button>PDF</button></a>
-                        <div class="abstract-container">
-                            <p>Prior work on in-context copying has shown the existence of induction heads, which attend to and promote individual tokens during copying. 
-                                In this work we introduce a new type of induction head: concept-level induction heads, which copy entire lexical units instead of individual tokens. 
-                                Concept induction heads learn to attend to the ends of multi-token words throughout training, working in parallel with token-level induction heads 
-                                to copy meaningful text. We show that these heads are responsible for semantic tasks like word-level translation, whereas token inductin heads are vital for tasks that can only be done verbatim, like copying nonsense tokens. 
-                                These two "routes" operate independently: we show that ablation of token induction heads causes models to paraphrase where they would otherwise copy verbatim. 
-                                In light of these findings, we argue that although token induction heads are vital for specific tasks, concept induction heads may be more broadly relevant for in-context learning.</p>
-                            </div>
-                        </div>
-                    </div> 
-            </div>
-
                 <div class="citation">
+                    <a href="https://arxiv.org/abs/2501.16496" target="_blank">Open Problems in Mechanistic Interpretability</a> <br>
                     Lee Sharkey, Bilal Chughtai, Joshua Batson, Jack Lindsey, Jeff Wu, Lucius Bushnaq, Nicholas Goldowsky-Dill, Stefan Heimersheim, 
                     Alejandro Ortega, Joseph Bloom, Stella Biderman, Adria Garriga-Alonso, Arthur Conmy, Neel Nanda, Jessica Rumbelow, Martin Wattenberg, 
                     Nandi Schoots, Joseph Miller, Eric J. Michaud, Stephen Casper, Max Tegmark, William Saunders, David Bau, <b>Eric Todd</b>, Atticus Geiger, 
-                    Mor Geva, Jesse Hoogland, Daniel Murfet, Tom McGrath.
-                    <a href="https://arxiv.org/abs/2501.16496">Open Problems in Mechanistic Interpretability.</a> 2025.
+                    Mor Geva, Jesse Hoogland, Daniel Murfet, Tom McGrath. <br>
+                    arxiv 2025.
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button> 
-                            <a href="https://arxiv.org/pdf/2501.16496"><button>PDF</button></a>
+                            <a href="https://arxiv.org/pdf/2501.16496" target="_blank"><button>PDF</button></a>
                             <div class="abstract-container">
                                 <p> Mechanistic interpretability aims to understand the computational mechanisms underlying neural networks' capabilities
                                     in order to accomplish concrete scientific and engineering goals. Progress in this field thus promises to provide greater assurance
@@ -204,13 +208,14 @@
                 </div>
 
                 <div class="citation">
-                    Aaron Mueller, Jannik Brinkmann, Millicent Li, Samuel Marks, Koyena Pal, Nikhil Prakash, Can Rager, Aruna Sankaranarayanan, Arnab Sen Sharma, Jiuding Sun, <b>Eric Todd</b>, David Bau, Yonatan Belinkov. 
-                    <a href="https://arxiv.org/abs/2408.01416">The Quest for the Right Mediator: A History, Survey, and Theoretical Grounding of Causal Interpretability.</a> 2024.
+                    <a href="https://arxiv.org/abs/2408.01416" target="_blank">The Quest for the Right Mediator: A History, Survey, and Theoretical Grounding of Causal Interpretability</a> <br>
+                    Aaron Mueller, Jannik Brinkmann, Millicent Li, Samuel Marks, Koyena Pal, Nikhil Prakash, Can Rager, Aruna Sankaranarayanan, Arnab Sen Sharma, Jiuding Sun, <b>Eric Todd</b>, David Bau, Yonatan Belinkov. <br>
+                    arxiv 2024.
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
                             <!-- <a href=""><button>Project Website</button></a> -->
-                            <a href="https://arxiv.org/pdf/2408.01416"><button>PDF</button></a>
+                            <a href="https://arxiv.org/pdf/2408.01416" target="_blank"><button>PDF</button></a>
                             <div class="abstract-container">
                                 <p> Interpretability provides a toolset for understanding how and why neural networks behave in certain ways. 
                                     However, there is little unity in the field: most studies employ ad-hoc evaluations and do not share theoretical foundations, 
