--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 
             <div class="citation">
                 <img src="images/papers/fv-2.png" alt="fv-paper">
-                <a href="https://arxiv.org/pdf/2310.15213" target="_blank">Function Vectors in Large Language Models</a><br>
+                <a href="https://arxiv.org/abs/2310.15213" target="_blank">Function Vectors in Large Language Models</a><br>
                 <b>Eric Todd</b>, Millicent L. Li, Arnab Sen Sharma, Aaron Mueller, Byron C. Wallace, David Bau.
                 <em>The Twelfth International Conference on Learning Representations.</em> (ICLR 2024)
                     <div class="button-container">
                         <button class="abstract-toggle">Abstract</button>
                         <a href="https://functions.baulab.info" target="_blank"><button>Project Website</button></a>
-                        <a href="https://arxiv.org/abs/2310.15213" target="_blank"><button>arXiv</button></a>
+                        <a href="https://arxiv.org/pdf/2310.15213" target="_blank"><button>PDF</button></a>
                         <a href="https://openreview.net/forum?id=AwyxtyMwaG" target="_blank"><button>OpenReview</button></a>
                         <div class="abstract-container">
                             <p>We report the presence of a simple neural mechanism that represents an input-output function as a vector 
@@ -81,13 +81,13 @@
                 <img src="images/papers/nnsight.png" alt="nnsight-paper">
                 <!-- <img src="images/papers/ndif_design.png" alt="nnsight-paper"> -->
                  <!-- <img src="images/papers/ndif-logo.png" alt="nnsight-paper"> -->
-                <a href="https://arxiv.org/pdf/2407.14561" target="_blank">NNsight and NDIF: Democratizing Access to Open-Weight Foundation Model Internals</a><br>
+                <a href="https://arxiv.org/abs/2407.14561" target="_blank">NNsight and NDIF: Democratizing Access to Open-Weight Foundation Model Internals</a><br>
                 Jaden Fiotto-Kaufman<sup>*</sup>, Alexander R. Loftus<sup>*</sup>, <b>Eric Todd</b>, Jannik Brinkmann, Koyena Pal, Dmitrii Troitskii, Michael Ripa, Adam Belfki, Can Rager, Caden Juang, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Nikhil Prakash, Carla Brodley, Arjun Guha, Jonathan Bell, Byron C. Wallace, David Bau.
                 <em>The Thirteenth International Conference on Learning Representations.</em> (ICLR 2025)
                     <div class="button-container">
                         <button class="abstract-toggle">Abstract</button>
                         <a href="https://ndif.us" target="_blank"><button>Project Website</button></a>
-                        <a href="https://arxiv.org/abs/2407.14561" target="_blank"><button>arXiv</button></a>
+                        <a href="https://arxiv.org/pdf/2407.14561" target="_blank"><button>PDF</button></a>
                         <a href="https://openreview.net/forum?id=MxbEiFRf39" target="_blank"><button>OpenReview</button></a>
                         <div class="abstract-container">
                             <p> We introduce NNsight and NDIF, technologies that work in tandem to enable
