--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img src="images/papers/fv-2.png" alt="fv-paper">
                 <a href="https://arxiv.org/abs/2310.15213" target="_blank">Function Vectors in Large Language Models</a><br>
                 <b>Eric Todd</b>, Millicent L. Li, Arnab Sen Sharma, Aaron Mueller, Byron C. Wallace, David Bau.
-                <em>The Twelfth International Conference on Learning Representations.</em> (ICLR 2024)
+                <em>The Twelfth International Conference on Learning Representations</em> (ICLR), 2024.
                     <div class="button-container">
                         <button class="abstract-toggle">Abstract</button>
                         <a href="https://functions.baulab.info" target="_blank"><button>Project Website</button></a>
@@ -83,7 +83,7 @@
                  <!-- <img src="images/papers/ndif-logo.png" alt="nnsight-paper"> -->
                 <a href="https://arxiv.org/abs/2407.14561" target="_blank">NNsight and NDIF: Democratizing Access to Open-Weight Foundation Model Internals</a><br>
                 Jaden Fiotto-Kaufman<sup>*</sup>, Alexander R. Loftus<sup>*</sup>, <b>Eric Todd</b>, Jannik Brinkmann, Koyena Pal, Dmitrii Troitskii, Michael Ripa, Adam Belfki, Can Rager, Caden Juang, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Nikhil Prakash, Carla Brodley, Arjun Guha, Jonathan Bell, Byron C. Wallace, David Bau.
-                <em>The Thirteenth International Conference on Learning Representations.</em> (ICLR 2025)
+                <em>The Thirteenth International Conference on Learning Representations</em> (ICLR), 2025.
                     <div class="button-container">
                         <button class="abstract-toggle">Abstract</button>
                         <a href="https://ndif.us" target="_blank"><button>Project Website</button></a>
@@ -126,6 +126,18 @@
                     <div class="year-content">
 
                         <div class="news-group">
+                            <h4>October 2025</h4>   
+                            <div class="news-item">Reviewing for the <a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026 Main Conference</a>.</div>  
+                            <div class="news-item">Had a lot of fun attending <a href="https://colmweb.org/" target="_blank">COLM 2025</a></div>
+                        </div>
+
+                        <div class="news-group">
+                            <h4>September 2025</h4>     
+                            <div class="news-item">Our survey Open Problems in Mechanistic Interpretability was accepted to TMLR.</div>
+                            <div class="news-item">Our survey <a href="https://doi.org/10.1162/COLI.a.572" target="_blank">The Quest for the Right Mediator: Surveying Mechanistic Interpretability Through the Lens of Causal Mediation Analysis</a> was published in Computational Linguistics</div>
+                        </div>
+
+                        <div class="news-group">
                             <h4>August 2025</h4>     
                             <div class="news-item">Had a great time attending <a href="https://nemiconf.github.io/summer25/" target="_blank">NEMI</a> again this year. We had 200+ people come to Northeastern and it was fun to see the exciting research others are working on.</div>
                             <div class="news-item">Reviewed for <a href="https://mechinterpworkshop.com/" target="_blank">Mechanistic Interpretability Workshop at NeurIPS 2025</a></div>
@@ -140,7 +152,7 @@
 
                         <div class="news-group">
                             <h4>June 2025</h4>                        
-                            <div class="news-item">Reviewed for <a href="https://neurips.cc/Conferences/2025" target="_blank">NeurIPS Main Conference</a></div>
+                            <div class="news-item">Reviewed for <a href="https://neurips.cc/Conferences/2025" target="_blank">NeurIPS 2025 Main Conference</a></div>
                         </div>
 
                         <div class="news-group">
