--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
                 <div class="citation">
                 <a href="https://arxiv.org/abs/2504.03022" target="_blank">The Dual-Route Model of Induction</a><br>
                 Sheridan Feucht, <b>Eric Todd</b>, Byron C. Wallace, David Bau. <br>
-                <em>The Second Conference on Language Modeling.</em> (COLM 2025)
+                <em>The Second Conference on Language Modeling</em> (COLM), 2025.
                 <div class="publication-content">
                     <div class="button-container">
                         <button class="abstract-toggle">Abstract</button> 
@@ -69,7 +69,7 @@
                     Jaden Fiotto-Kaufman, Alexander R. Loftus, <b>Eric Todd</b>, Jannik Brinkmann, Koyena Pal, Dmitrii Troitskii, 
                     Michael Ripa, Adam Belfki, Can Rager, Caden Juang, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Nikhil Prakash, 
                     Carla Brodley, Arjun Guha, Jonathan Bell, Byron C. Wallace, David Bau. <br>
-                    <em>The Thirteenth International Conference on Learning Representations.</em> (ICLR 2025)
+                    <em>The Thirteenth International Conference on Learning Representations</em> (ICLR), 2025.
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
@@ -101,7 +101,7 @@
                 <div class="citation">
                     <a href="https://arxiv.org/abs/2310.15213" target="_blank">Function Vectors in Large Language Models</a> <br> 
                     <b>Eric Todd</b>, Millicent L. Li, Arnab Sen Sharma, Aaron Mueller, Byron C. Wallace, David Bau. <br>
-                    <em>The Twelfth International Conference on Learning Representations.</em> (ICLR 2024)
+                    <em>The Twelfth International Conference on Learning Representations</em> (ICLR), 2024.
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
@@ -129,7 +129,7 @@
                         focused crowd involvement at recreational events</a> <br>
                     <b>Eric Todd</b>, Mylan R. Cook, Katrina Pedersen, David S. Woolworth, Brooks A. Butler, Xin Zhao,
                     Colt Liu, Kent L. Gee, Mark K. Transtrum, Sean Warnick. <br>
-                    <em>Proceedings of Meetings on Acoustics</em> <b>39</b> (1) (2019)
+                    <em>Proceedings of Meetings on Acoustics</em> <b>39</b> (1), 2019.
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
@@ -154,7 +154,7 @@
                 <div class="citation">
                     <a href="https://pubs.aip.org/asa/poma/article/35/1/055006/997305/Classifying-crowd-behavior-at-collegiate" target="_blank">Classifying crowd behavior at collegiate basketball games using acoustic data.</a><br>
                     Brooks A. Butler, Katrina Pedersen, Mylan R. Cook, Spencer G. Wadsworth, <b>Eric Todd</b>, Dallen Stark, Kent L. Gee, Mark K. Transtrum, Sean Warnick. <br>
-                    <em>Proceedings of Meetings on Acoustics</em> <b>35</b> (1) (2018)
+                    <em>Proceedings of Meetings on Acoustics</em> <b>35</b> (1), 2018.
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
