--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <a href="https://github.com/ericwtodd" target="_blank"><i class="fab fa-github fa-lg"></i><span> Github</span></a>
             <a href="https://www.linkedin.com/in/eric-w-todd/" target="_blank"><i class="fab fa-fw fa-linkedin"></i><span> LinkedIn</span></a>
             <a href="https://scholar.google.com/citations?user=o12WPZEAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar" style="font-size:1.3rem"></i><span> Google Scholar</span></a>
-            <!-- <a href="https://bsky.app/profile/ericwtodd.bsky.social" target="_blank"><i class="fab fa-bluesky" style="font-size:1.3rem"></i><span> Bluesky</span></a> -->
+            <a href="https://bsky.app/profile/ericwtodd.bsky.social" target="_blank" style="display:inline-flex;align-items:center;gap:4px;"><img src="https://bsky.app/static/apple-touch-icon.png" alt="Bluesky" width="18" height="18"><span> Bluesky</span></a>
+            <!-- <a href="https://bsky.app/profile/ericwtodd.bsky.social" target="_blank"><i class="fa-brands fa-bluesky" style="font-size:1.3rem"></i><span> Bluesky</span></a> -->
           </div>
         </div>
 
@@ -44,7 +45,7 @@
             <h1>About Me</h1>
             <p>Hi, my name is Eric Todd. I'm a fourth-year PhD student at Northeastern University advised by <a href="https://baulab.info/" target="_blank">Professor David Bau</a>. Prior to beginning my PhD, I studied <a href="https://acme.byu.edu/acme-mission" target="_blank">Applied and Computational Mathematics (ACME)</a> at Brigham Young University (BYU).</p>
             <p>I'm interested in understanding learned structure inside of large neural networks, and how their internal representations enable their impressive generalization capabilities.</p>
-            <p>My research interests generally include machine learning and interpretability. I'm particularly excited by generative models and their applications in natural language and computer vision.</p>
+            <p>My research interests generally include machine learning, interpretability, and deep learning as a science. I'm particularly interested in research on in-context learning (ICL) and causal abstraction in neural networks.</p>
             <!-- <p>My long-term vision for interpretability research is that it will enable trustworthy understanding of large neural networks in terms of </p> -->
           </section>
 
@@ -127,14 +128,14 @@
 
                         <div class="news-group">
                             <h4>October 2025</h4>   
-                            <div class="news-item">Reviewing for the <a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026 Main Conference</a>.</div>  
-                            <div class="news-item">Had a lot of fun attending <a href="https://colmweb.org/" target="_blank">COLM 2025</a></div>
+                            <div class="news-item">Reviewed for the <a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026 Main Conference</a>.</div>  
+                            <div class="news-item">Had a lot of fun attending <a href="https://colmweb.org/" target="_blank">COLM 2025</a> in Montreal!</div>
                         </div>
 
                         <div class="news-group">
                             <h4>September 2025</h4>     
-                            <div class="news-item">Our survey Open Problems in Mechanistic Interpretability was accepted to TMLR.</div>
-                            <div class="news-item">Our survey <a href="https://doi.org/10.1162/COLI.a.572" target="_blank">The Quest for the Right Mediator: Surveying Mechanistic Interpretability Through the Lens of Causal Mediation Analysis</a> was published in Computational Linguistics</div>
+                            <div class="news-item">Our survey <a href="https://openreview.net/forum?id=91H76m9Z94", target="_blank">Open Problems in Mechanistic Interpretability</a> was accepted to TMLR.</div>
+                            <div class="news-item">Our survey <a href="https://doi.org/10.1162/COLI.a.572" target="_blank">The Quest for the Right Mediator: Surveying Mechanistic Interpretability for NLP Through the Lens of Causal Mediation Analysis</a> was published in Computational Linguistics.</div>
                         </div>
 
                         <div class="news-group">
